--- a/English.lproj/PBCloneRepositoryPanel.xib
+++ b/English.lproj/PBCloneRepositoryPanel.xib
@@ -50,7 +50,7 @@
 				<string key="NSWindowContentMaxSize">{2000, 185}</string>
 				<string key="NSWindowContentMinSize">{488, 185}</string>
 				<object class="NSView" key="NSWindowView" id="1006">
-					<nil key="NSNextResponder"/>
+					<reference key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
 					<array class="NSMutableArray" key="NSSubviews">
 						<object class="NSTextField" id="413349220">
@@ -58,6 +58,7 @@
 							<int key="NSvFlags">266</int>
 							<string key="NSFrame">{{126, 143}, {342, 22}}</string>
 							<reference key="NSSuperview" ref="1006"/>
+							<reference key="NSWindow"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSTextFieldCell" key="NSCell" id="397653358">
 								<int key="NSCellFlags">-1804468671</int>
@@ -96,6 +97,7 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{17, 145}, {104, 17}}</string>
 							<reference key="NSSuperview" ref="1006"/>
+							<reference key="NSWindow"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSTextFieldCell" key="NSCell" id="673727363">
 								<int key="NSCellFlags">68288064</int>
@@ -125,6 +127,7 @@
 							<int key="NSvFlags">289</int>
 							<string key="NSFrame">{{378, 12}, {96, 32}}</string>
 							<reference key="NSSuperview" ref="1006"/>
+							<reference key="NSWindow"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="38086624">
 								<int key="NSCellFlags">67239424</int>
@@ -145,6 +148,7 @@
 							<int key="NSvFlags">289</int>
 							<string key="NSFrame">{{282, 12}, {96, 32}}</string>
 							<reference key="NSSuperview" ref="1006"/>
+							<reference key="NSWindow"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="332481026">
 								<int key="NSCellFlags">67239424</int>
@@ -165,6 +169,7 @@
 							<int key="NSvFlags">292</int>
 							<string key="NSFrame">{{26, 22}, {258, 17}}</string>
 							<reference key="NSSuperview" ref="1006"/>
+							<reference key="NSWindow"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSTextFieldCell" key="NSCell" id="1037897552">
 								<int key="NSCellFlags">68288064</int>
@@ -184,6 +189,7 @@
 							<int key="NSvFlags">265</int>
 							<string key="NSFrame">{{392, 118}, {76, 17}}</string>
 							<reference key="NSSuperview" ref="1006"/>
+							<reference key="NSWindow"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="904228252">
 								<int key="NSCellFlags">-2080244224</int>
@@ -208,6 +214,7 @@
 							<int key="NSvFlags">266</int>
 							<string key="NSFrame">{{126, 88}, {342, 22}}</string>
 							<reference key="NSSuperview" ref="1006"/>
+							<reference key="NSWindow"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSTextFieldCell" key="NSCell" id="823076710">
 								<int key="NSCellFlags">-1804468671</int>
@@ -226,6 +233,7 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{17, 90}, {104, 17}}</string>
 							<reference key="NSSuperview" ref="1006"/>
+							<reference key="NSWindow"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSTextFieldCell" key="NSCell" id="892644863">
 								<int key="NSCellFlags">68288064</int>
@@ -242,6 +250,7 @@
 							<int key="NSvFlags">265</int>
 							<string key="NSFrame">{{392, 63}, {76, 17}}</string>
 							<reference key="NSSuperview" ref="1006"/>
+							<reference key="NSWindow"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="315386893">
 								<int key="NSCellFlags">-2080244224</int>
@@ -262,6 +271,7 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{136, 63}, {177, 18}}</string>
 							<reference key="NSSuperview" ref="1006"/>
+							<reference key="NSWindow"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="987273133">
 								<int key="NSCellFlags">67239424</int>
@@ -286,8 +296,10 @@
 						</object>
 					</array>
 					<string key="NSFrameSize">{488, 185}</string>
+					<reference key="NSSuperview"/>
+					<reference key="NSWindow"/>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {2560, 1578}}</string>
+				<string key="NSScreenRect">{{0, 0}, {1366, 768}}</string>
 				<string key="NSMinSize">{488, 207}</string>
 				<string key="NSMaxSize">{2000, 207}</string>
 				<string key="NSFrameAutosaveName">PBCloneRepositoryPanel</string>
@@ -368,7 +380,7 @@
 					</array>
 					<string key="NSFrameSize">{397, 98}</string>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {2560, 1578}}</string>
+				<string key="NSScreenRect">{{0, 0}, {1366, 768}}</string>
 				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
 				<bool key="NSWindowIsRestorable">YES</bool>
 			</object>
@@ -703,6 +715,8 @@
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="-3.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<boolean value="YES" key="1.IBNSWindowAutoPositionCentersHorizontal"/>
+				<boolean value="YES" key="1.IBNSWindowAutoPositionCentersVertical"/>
 				<string key="1.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="1.IBWindowTemplateEditedContentRect">{{587, 784}, {488, 185}}</string>
 				<boolean value="NO" key="1.NSWindowTemplate.visibleAtLaunch"/>
@@ -827,7 +841,7 @@ dGgvdG8vcmVwby5naXQvCnNzaDovL1t1c2VyQF1ob3N0Lnh6L3BhdGgvdG8vcmVwby5naXQvA</strin
 		</object>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin.macosx</string>
-			<integer value="1050" key="NS.object.0"/>
+			<real value="1070" key="NS.object.0"/>
 		</object>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDevelopmentDependencies">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin.InterfaceBuilder3</string>
