--- a/html/views/history/index.html
+++ b/html/views/history/index.html
@@ -51,7 +51,7 @@
 			</table>
 		</td>
 	</tr>
-	<tr>
+	<tr id="subject_in_head">
 		<td class="property_name">Subject:</td>
 		<td id="subjectID" style="font-weight:bold"></td>
 	</tr>
